[gd_scene load_steps=15 format=3 uid="uid://dk33uerb3n6jn"]

[ext_resource type="Script" path="res://Scripts/Editor/ColorZoneEditor/ColorZoneEditor.gd" id="1_ulwj7"]
[ext_resource type="Script" path="res://Scripts/CustomContainers/Control2dElements.gd" id="2_xal8u"]
[ext_resource type="PackedScene" uid="uid://ck7cnkp4xqrmy" path="res://Assets/Game/Notes/TapNote/TapNoteSkin.tscn" id="2_ybt3q"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="4_5oco5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsuhb"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lyl32"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sm4xj"]
bg_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pom7v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujk8m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ta80m"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.25098, 0.25098, 0.25098, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ja678"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.121569, 0.121569, 0.121569, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll260"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.67451, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0f1c"]
bg_color = Color(0, 0, 0, 0.686275)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ae5th"]
bg_color = Color(0, 0, 0, 0.87451)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="ColorZoneEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ulwj7")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.75)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AllContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/AllContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsuhb")

[node name="TabContainer" type="HBoxContainer" parent="CenterContainer/AllContainer/PanelContainer"]
layout_mode = 2
alignment = 2

[node name="ExitButton" type="Button" parent="CenterContainer/AllContainer/PanelContainer/TabContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_lyl32")
theme_override_styles/hover = SubResource("StyleBoxFlat_sm4xj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lyl32")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pom7v")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujk8m")
text = "Save & Close"

[node name="WindowsContainer" type="HBoxContainer" parent="CenterContainer/AllContainer"]
layout_mode = 2

[node name="ContentPanel" type="PanelContainer" parent="CenterContainer/AllContainer/WindowsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ta80m")

[node name="LeftWindowContainer" type="VBoxContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel"]
layout_mode = 2

[node name="MainLeftWindowContainer" type="VBoxContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NotePanelContainer" type="PanelContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ja678")

[node name="NotesContainer" type="HBoxContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Note1" type="Control" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_xal8u")

[node name="TapNoteSkin" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note1" instance=ExtResource("2_ybt3q")]
position = Vector2(50, 37.5)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note1"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="Panel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note1"]
visible = false
self_modulate = Color(1, 1, 1, 0.25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll260")

[node name="Note2" type="Control" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_xal8u")

[node name="TapNoteSkin" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note2" instance=ExtResource("2_ybt3q")]
position = Vector2(50, 37.5)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="Panel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note2"]
visible = false
self_modulate = Color(1, 1, 1, 0.25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll260")

[node name="Note3" type="Control" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_xal8u")

[node name="TapNoteSkin" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note3" instance=ExtResource("2_ybt3q")]
position = Vector2(50, 37.5)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="Panel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note3"]
visible = false
self_modulate = Color(1, 1, 1, 0.25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll260")

[node name="Note4" type="Control" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_xal8u")

[node name="TapNoteSkin" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note4" instance=ExtResource("2_ybt3q")]
position = Vector2(50, 37.5)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note4"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="Panel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note4"]
visible = false
self_modulate = Color(1, 1, 1, 0.25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll260")

[node name="Note5" type="Control" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_xal8u")

[node name="TapNoteSkin" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note5" instance=ExtResource("2_ybt3q")]
position = Vector2(50, 37.5)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note5"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="Panel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note5"]
visible = false
self_modulate = Color(1, 1, 1, 0.25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll260")

[node name="Note6" type="Control" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("2_xal8u")

[node name="TapNoteSkin" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note6" instance=ExtResource("2_ybt3q")]
position = Vector2(50, 37.5)
scale = Vector2(0.2, 0.2)

[node name="Button" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note6"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="Panel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/NotePanelContainer/NotesContainer/Note6"]
visible = false
self_modulate = Color(1, 1, 1, 0.25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll260")

[node name="SmoothScrollContainer" type="ScrollContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
script = ExtResource("4_5oco5")
speed = 10.0
damping_scroll = 0.3
damping_drag = 0.3
drag_with_touch = false
follow_focus_ = false
allow_horizontal_scroll = false
auto_allow_scroll = false
friction_scroll = 0.8
friction_drag = 0.8
scrollbar_hide_time = 1.0
scrollbar_fade_out_time = 0.2

[node name="ListContainer" type="VBoxContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/SmoothScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" type="Button" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/SmoothScrollContainer/ListContainer"]
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 16
text = "Create New Colorway"

[node name="HintContainer" type="PanelContainer" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o0f1c")

[node name="Hint" type="Label" parent="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/HintContainer"]
self_modulate = Color(1, 1, 1, 0.0470588)
layout_mode = 2
text = "Change colors by clicking on notes"

[node name="ColorPickerPanel" type="PanelContainer" parent="CenterContainer/AllContainer/WindowsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ta80m")

[node name="ColorPicker" type="ColorPicker" parent="CenterContainer/AllContainer/WindowsContainer/ColorPickerPanel"]
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false
picker_shape = 1
can_add_swatches = false
sampler_visible = false
presets_visible = false

[node name="UnactivePanel" type="Panel" parent="CenterContainer/AllContainer/WindowsContainer/ColorPickerPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ae5th")

[connection signal="pressed" from="CenterContainer/AllContainer/PanelContainer/TabContainer/ExitButton" to="." method="exit_button_pressed"]
[connection signal="pressed" from="CenterContainer/AllContainer/WindowsContainer/ContentPanel/LeftWindowContainer/MainLeftWindowContainer/SmoothScrollContainer/ListContainer/CreateButton" to="." method="create_new_colorway"]
[connection signal="color_changed" from="CenterContainer/AllContainer/WindowsContainer/ColorPickerPanel/ColorPicker" to="." method="color_changed"]
